# cargo-native-install

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-native-install.1
.github/workflows/: rust.yml
src/: main.rs  manifest.rs
