[package]
name = "cargo-native-install"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "4.0.2"
toml = "0.5.7"
home = "0.5.3"
install-dirs = "0.1.0"
cargo_toml = "0.8.1"
serde = {version="1.0.117",features=["derive"]}
serde_derive = "1.0.117"

[target.'cfg(unix)'.dependencies]
libc = "0.2.80"

[[bin]]
name = "cargo-native-install"

[package.metadata.install-targets.cargo-native-install]


