[package]
name = "cargo-native-install"
version = "0.1.1"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/chorman0773/cargo-native-install"
description = """
Installs cargo targets in a manner similar to make install or cmake --install
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "4.0.2"
toml = "0.5.7"
home = "0.5.3"
install-dirs = "0.1.0"
cargo_toml = "0.8.1"
serde = {version="1.0.117",features=["derive"]}
serde_derive = "1.0.117"

[target.'cfg(unix)'.dependencies]
libc = "0.2.80"

[[bin]]
name = "cargo-native-install"

[package.metadata.install-targets.man]
type = "man"
target-file = "cargo-native-install.1"


